--- a/Style.css
+++ b/Style.css
@@ -29,18 +29,17 @@ height: 100%;
 z-index: 8;
 }
 .menu {
-    list-style: none;
+    background-color: dimgrey;
     position: fixed;
-    top: 10px;
-    right: 30px;
+    width: 100%;
     z-index: 10;
     cursor: pointer;
+    margin-top: 0px;
+    top: 0;
 }
 .item {
     font-family: 'Bebas Neue', cursive;
-    float: left;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    display: inline;
     padding-left: 9px;
     padding-right: 9px;
     color: blueviolet;
@@ -55,4 +54,13 @@ p {
     margin: 25px auto;
     font-size: 20px;
     line-height: 1.3;
+}
+#CONTACTS {
+    background: linear-gradient(#00e6e6 0%, #ff66b3 100%);
+}
+.item:hover {
+    font-size: 38px;
+}
+a:hover {
+    color: blanchedalmond;
 }
